# rocklang

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  MIT-LICENSE.txt  README.md  history.txt  index.md  main  main.c  watch-coverage.sh
.github/actions/cargo_cache/: action.yml
.github/actions/install_llvm/: action.yml
.github/actions/install_valgrind/: action.yml
.github/workflows/: coverage.yml  install_llvm.yml  main.yml  release.yml
examples/: ffi.rc  ffi.rck  foo.ll  foo.s  lambda.rc  mandelbrot.rc  mandelbrot.rck  sieve.ct  sieve.rc  sieve.rck  struct.rc  test.rc
rocki/: Cargo.toml
rocki/src/: lib.rs  main.rs
src/: compiler.rs  evaluator.rs  expression.rs  lib.rs  main.rs  parser.rs  test_utils.rs  token.rs  tokenizer.rs  value.rs  visitor.rs
src/compiler/: assignment.rs  binary.rs  bool.rs  break_visitor.rs  conditional.rs  extern_visitor.rs  frame.rs  func_call.rs  func_decl_vistor.rs  grouping.rs  identifier.rs  load.rs  mod.rs  numeric.rs  program.rs  scope.rs  string.rs  unary.rs  utils.rs  value.rs  var.rs  variable.rs  while_visitor.rs
src/llvm/: basic_block.rs  builder.rs  context.rs  engine.rs  function.rs  function_type.rs  llvm_error.rs  mod.rs  module.rs  pass_manager.rs  typ.rs  utils.rs  value.rs
stdlib/: Cargo.toml
stdlib/src/: lib.rs
test_utils/: Cargo.toml
test_utils/src/: lib.rs
tests/: compiler_tests.rs  integration_tests.rs  parser_tests.rs  token_test.rs  tokenizer_tests.rs
wix/: License.rtf  main.wxs
