[package]
name = "rocklang"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
	"stdlib"
]

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.59"
assert-json-diff = "2.0.1"
stdlib = { path = "./stdlib" }
llvm-sys = "100"

# [profile.release]
# debug = true
