[package]
name = "rocklang"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
	"stdlib"
]

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.59"
assert-json-diff = "2.0.1"
stdlib = { path = "./stdlib" }
llvm-sys = "130"
backtrace = "0.3"

[dev-dependencies]
assert_cmd = "0.10"
predicates = "1"

# [profile.release]
# debug = true
