[package]
name = "rocklang"
version = "0.2.8"
edition = "2021"
authors = ["Jaroslaw Konik"]
license = "MIT"
description = "JIT-compiled functional programming language."
documentation = "https://jarkonik.github.io/rocklang/"
homepage = "https://jarkonik.github.io/rocklang/"
repository = "https://github.com/jarkonik/rocklang"

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
	"stdlib",
	"test_utils"
]

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.59"
assert-json-diff = "2.0.1"
stdlib = { path = "./stdlib" }
llvm-sys = "130"
backtrace = "0.3"
test_utils = { path = "./test_utils" }

[dev-dependencies]
assert_cmd = "0.10"
predicates = "2.1.0"
pretty_assertions = "1.2"
indoc = "1.0"
mockall = "0.11"

# [profile.release]
# debug = true
